--- a/app/views/sections/sitemap.html.erb
+++ b/app/views/sections/sitemap.html.erb
@@ -1,3 +1,3 @@
 <ul id="sitemap">
-	<%= render :partial => "common/menu_item", :collection => get_menu_sections, :as => :item, :locals => { :show_pages => true, :is_page => false } %>
+	<%= render :partial => "common/menu_item", :collection => get_menu_sections, :as => :item, :locals => { :show_pages => true, :is_page => false, :show_all_pages => true } %>
 </ul>
