--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -51,7 +51,7 @@
 	<li><%= image_tag("add.png", :size => "16x16", :alt => "New") %><%= link_to "Add Block to Page", new_section_page_block_path(@section,@page), :class => "modal append_main", :title => "Edit" %></li>
 <% end %>
 
-<% unless @section.parent.blank? || @section.siblings.blank? || @section.pages.size == 1  %>
+<% unless @section.parent.blank? || ( @section.siblings.blank? and @section.pages.size == 1 )  %>
 	<% content_for :container_class do %>has-sidebar<% end %>
 	<%= render :partial => "common/page_menu" %>
 <% end %>
