adding possible right sidebar

--- a/app/views/common/_page_menu.html.erb
+++ b/app/views/common/_page_menu.html.erb
@@ -1,4 +1,4 @@
-<div id="sidebar">
+<div id="sidebar-left">
 	<ul id="pagemenu">
 		<%= render :partial => "common/menu_item", :collection => get_menu_sections(@section_root.id), :as => :item, :locals => { :show_pages => true, :is_page => false, :show_all_pages => false } %>
 	</ul>
