added Partials model

--- a/app/views/contents/_form.html.erb
+++ b/app/views/contents/_form.html.erb
@@ -1,12 +1,15 @@
   <%= hidden_field_tag :block_id, @block.id if defined? @block %>
-	<p>
-		<%= form.label :name, "Descriptive Name (for reference and identification):" %><br />
-		<%= form.text_field :name %>
-	</p>
-	<p>
-		<%= form.label :css_classes, "CSS classes (separate with single spaces):" %><br />
-		<%= form.text_field :css_classes %>
-	</p>
+	<fieldset>
+		<legend>Generic Content fields:</legend>
+		<p>
+			<%= form.label :name, "Descriptive Name (for reference and identification):" %><br />
+			<%= form.text_field :name %>
+		</p>
+		<p>
+			<%= form.label :css_classes, "CSS classes (separate with single spaces):" %><br />
+			<%= form.text_field :css_classes %>
+		</p>
+	</fieldset>
 <% if form.object.new_record? and form.object.contentable.blank? %>
 	<% form.fields_for :contentable, Object::const_get(@content_controller.classify).new do |cf| %>
 		<%= cf.hidden_field :contentable_class, :value => cf.object.class %>
