--- a/app/views/contents/select_type_of.html.erb
+++ b/app/views/contents/select_type_of.html.erb
@@ -1,5 +1,18 @@
 What type of content do you want to add?<br />
-<%= select_tag "new_content_chooser", options_for_select({"Text/Images" => "copy_texts", "Plain List" => "lists", "Feed" => "feeds", "Quote List" => "quote_lists" }, :selected => "copy_texts") %>
+<% options = {
+	"Text/Images" => "copy_texts", 
+	"Plain List" => "lists", 
+	"Feed" => "feeds", 
+	"Quote List" => "quote_lists"
+	 }
+if authorized?(:admin)
+	admin_options = {
+		"Rails Partial" => "partials"
+	}
+	options.merge!(admin_options)
+end
+%>
+<%= select_tag "new_content_chooser", options_for_select(options, :selected => "copy_texts") %>
 <%= link_to "Go", new_block_content_path(@block, :content_controller => "copy_texts"), :id => "new_content_chooser_link" %>
 <div id="content_form_container">
 </div>
