changed so admin buttons are available on block and content for all users

--- a/app/views/blocks/_content.html.erb
+++ b/app/views/blocks/_content.html.erb
@@ -1,7 +1,7 @@
 <% if session[:text_size].blank? then session[:text_size] = "medium" end %>
 <% css = (dom_id(content) + " " + (content.css_classes || "") + " " + session[:text_size]).strip %>
 <% div_for content, :class => css do %>
-	<% if authorized?(:admin) %>
+	<% if authorized? %>
 		<div class="admin-links" style="display: none;">
 			Content: 
 			<%= link_to image_tag("pencil.png", :size => "16x16"), edit_block_content_path(parent_block,content), :class => "modal update_content_#{content.id}", :title => "Edit" %>
