--- a/app/views/contents/select_type_of.html.erb
+++ b/app/views/contents/select_type_of.html.erb
@@ -3,7 +3,8 @@ What type of content do you want to add?<br />
 	"Text/Images" => "copy_texts", 
 	"Plain List" => "lists", 
 	"Feed" => "feeds", 
-	"Quote List" => "quote_lists"
+	"Quote List" => "quote_lists",
+	"Blog" => "blogs"
 	 }
 if authorized?(:admin)
 	admin_options = {
