--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 	<meta name="author" content="Command C, Custom Web Site Design, Website Design" />
 	<meta name="robots" content="index,follow" />
 	<link rel="shortcut icon" href="/favicon.ico" />
+	<%= yield(:auto_discovery_link) %>
 	<%= stylesheet_link_tag 'custom-theme/jquery-ui', 'modal', 'blockhead', 'screen' %>
 	<!--[if IE]>
 	<%= stylesheet_link_tag 'ie' %>
