--- a/app/views/blogs/_block_show.html.erb
+++ b/app/views/blogs/_block_show.html.erb
@@ -1,11 +1,10 @@
 <% content_for :auto_discovery_link do %>
 	<%= auto_discovery_link_tag :rss, blog_posts_url(1, :format => :rss) %>
 <% end %>
-
-<h4>
-	<%= link_to blog.title, blog %>
-	<%= link_to image_tag("rss.png", :size => "18x20", :alt => "RSS icon"), blog_posts_url(blog, :format => :rss), :title => "RSS", :target => "_blank" %>
-</h4>
+<div id="blog_title">
+	<h4><%= link_to blog.title, blog %></h4>
+	<%= link_to image_tag("rss.png", :size => "18x20", :alt => "RSS icon", :id => "blog_rss_link"), blog_posts_url(blog, :format => :rss), :title => "RSS", :target => "_blank" %>
+</div>
 <ul class="blog_posts">
 	<% blog.recent_posts(4).each do |post| %>
 		<% content_tag_for :li, post do %>
