--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -5,10 +5,10 @@
 <%= render :partial => "blogs/archive_menu" %>
 
 <div class="content has-sidebar-right">
-	<h4>
-		<%= link_to @blog.title, @blog %>
-		<%= link_to image_tag("rss.png", :size => "18x20", :alt => "RSS icon"), blog_posts_url(@blog, :format => :rss), :title => "RSS", :target => "_blank" %>
-	</h4>
+	<div id="blog_title">
+		<h4><%= link_to @blog.title, @blog %></h4>
+		<%= link_to image_tag("rss.png", :size => "18x20", :alt => "RSS icon", :id => "blog_rss_link"), blog_posts_url(@blog, :format => :rss), :title => "RSS", :target => "_blank" %>
+	</div>
 	<% unless @posts.blank? %>
 		<ul id="blog_posts_list" class="blog_posts">
 			<% @posts.each do |post| %>
