--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -5,7 +5,7 @@
 <%= render :partial => "blogs/archive_menu" %>
 
 <div class="content has-sidebar-right">
-	<div id="blog_title">
+	<div id="blog_title" class="clearfix">
 		<h4><%= link_to @blog.title, @blog %></h4>
 		<%= link_to image_tag("rss.png", :size => "18x20", :alt => "RSS icon", :id => "blog_rss_link"), blog_posts_url(@blog, :format => :rss), :title => "RSS", :target => "_blank" %>
 	</div>
