--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -2,6 +2,11 @@
 	<%= auto_discovery_link_tag :rss, blog_posts_url(1, :format => :rss) %>
 <% end %>
 
+<% content_for :body_class do %>
+	<%= "admin-mode" if authorized? %>
+	<%= dom_id(@section) %>
+<% end %>
+
 <%= render :partial => "blogs/archive_menu" %>
 
 <div class="content has-sidebar-right">
