--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,13 +24,17 @@
 <%= render :partial => "blogs/archive_menu" %>
 
 <% div_for @post, :class => "content has-sidebar-right" do %>
-	<h4>
+	<div id="blog_title" class="clearfix">
+		<h4><%= link_to @blog.title, @blog %></h4>
+		<%= link_to image_tag("rss.png", :size => "18x20", :alt => "RSS icon", :id => "blog_rss_link"), blog_posts_url(@blog, :format => :rss), :title => "RSS", :target => "_blank" %>
+	</div>
+	<div class="post_title">
 		<%= @post.title %>
 		<% if authorized? %>
 			<%= link_to image_tag("pencil.png", :size => "16x16"), edit_blog_post_path(@blog,@post), :title => "Edit Post", :class => "modal update_post_#{@post.id}" %>
 		<% end %>
-	</h4>
-	<h5><%= @post.published_on.to_formatted_s(:long_ordinal) %></h5>
+	</div>
+	<div class="post_date"><%= @post.published_on.to_formatted_s(:long_ordinal) %></div>
 	<%= textilize(@post.body) %>
 	<div>
 		<%= link_to "Back", @blog %>
