--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,7 +24,7 @@
 <%= render :partial => "blogs/archive_menu" %>
 
 <% div_for @post, :class => "content has-sidebar-right" do %>
-	<div id="blog_title" class="clearfix">
+	<div id="blog_title">
 		<h4><%= link_to @blog.title, @blog %></h4>
 		<%= link_to image_tag("rss.png", :size => "18x20", :alt => "RSS icon", :id => "blog_rss_link"), blog_posts_url(@blog, :format => :rss), :title => "RSS", :target => "_blank" %>
 	</div>
