force show of year in archive params

--- a/app/views/blogs/_archive_menu.html.erb
+++ b/app/views/blogs/_archive_menu.html.erb
@@ -1,4 +1,4 @@
-<% current_date = ( defined?(@post) ? @post.published_on : Date.current ) %>
+<% current_date = ( defined?(@post) ? @post.published_on : ( !params[:year].blank? ? Date.new(params[:year]) : Date.current) ) %>
 <% start_year = @first_post.published_on.year %>
 <div class="block sidebar-right">
 	<ul id="blog_archive_menu">
