made autoscroll elements position relative so scroll buttons will postition properly

--- a/public/stylesheets/blockhead.css
+++ b/public/stylesheets/blockhead.css
@@ -309,6 +309,9 @@ div.pagination {
 /*****************
 * Automatic Scrolling Test
 ******************/
+.autoscroll {
+	position: relative;
+}
 
 .scroll-pane  {
 	overflow: hidden;
