--- a/app/views/blogs/_recent_posts.html.erb
+++ b/app/views/blogs/_recent_posts.html.erb
@@ -5,7 +5,7 @@
 <ul class="blog_posts">
 	<% Blog.recent_posts(1,3).each do |post| %>
 		<% content_tag_for :li, post do %>
-			post.title
+			<%= post.title %>
 			<%= link_to "MORE...", blog_post_path(post.blog,post) %>
 		<% end %>
 	<% end %>
