--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -8,7 +8,7 @@
   </p>
   <p>
 		Section: <br />
-    <%= form.collection_select :section_id, Section.all, :id, :long_name, { :prompt => true } %>
+    <%= form.collection_select :section_id, Section.all, :id, :long_name, { :include_blank => true } %>
   </p>
   <p>
     <%= form.label :published %><br />
