--- a/app/views/seo_profiles/_form_include.html.erb
+++ b/app/views/seo_profiles/_form_include.html.erb
@@ -1,4 +1,4 @@
 <p>
 	<label>SEO Profile:</label><br />
-	<%= f.collection_select :seo_profile_id, SeoProfile.all, :id, :name %>
+	<%= f.collection_select :seo_profile_id, SeoProfile.all, :id, :name, :include_blank => true %>
 </p>
