changes to feed

--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -1,6 +1,6 @@
 <p>
-  <%= form.label :link, "Copy and paste the feed URL here:" %><br />
-  <%= form.text_field :link %>
+  <%= form.label :feed_url, "Copy and paste the feed URL here:" %><br />
+  <%= form.text_field :feed_url %>
 </p>
 <p>
   <%= form.label :display_count, "# of entries to display:" %><br />
