exclude block headlines from scroll

--- a/public/stylesheets/blockhead.css
+++ b/public/stylesheets/blockhead.css
@@ -317,6 +317,10 @@ div.pagination {
 	overflow: hidden;
 	height: inherit;
 }
+.scroll-content > div {
+	position: static;
+}
+
 
 /*****************
 * Blog
