--- a/public/stylesheets/blockhead.css
+++ b/public/stylesheets/blockhead.css
@@ -32,6 +32,7 @@ img {
 
 div.content, div.block {
 	position: relative;
+	z-index: 3;
 	border: 2px solid transparent;
 }
 div.block {
@@ -66,9 +67,12 @@ div#container {
 	text-align: left;
 	width: 870px;
 	margin: 0 auto;
+	position: relative;
+	z-index: 0;
 }
 div#content {
 	position: relative;
+	z-index: 1;
 }
 div#sidebar {
 	float: left;
