--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,6 +8,13 @@
 	<% end %>
 <% end %>
 
+<% content_for :body_class do 
+	body_class = ""
+	body_class << " admin-mode" if authorized?
+	body_class << (" " + dom_id(@section))
+	puts body_class.strip!
+end %>
+
 <% content_for :auto_discovery_link do %>
 	<%= auto_discovery_link_tag :rss, blog_posts_url(1, :format => :rss) %>
 <% end %>
