--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,7 +1,9 @@
-<% content_for :body_class do %>
-	<%= "admin-mode" if authorized? %>
-	<%= dom_id(@section) %>
-<% end %>
+<% content_for :body_class do 
+	body_class = ""
+	body_class << " admin-mode" if authorized?
+	body_class << (" " + dom_id(@section))
+	puts body_class.strip!
+end %>
 
 Coming soon!
 
