--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -12,7 +12,7 @@
 	body_class << " root_" + dom_id(@section_root) unless @section_root == @section
 	body_class << " " + dom_id(@section)
 	body_class << " " + dom_id(@page)
-	puts body_class.strip!
+	return body_class.strip!
 end %>
 
 <% content_for :alert do %>
