--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,7 +16,7 @@
 	body_class = ""
 	body_class << " admin-mode" if authorized?
 	body_class << (" " + dom_id(@section))
-	puts body_class.strip!
+	return body_class.strip!
 end %>
 
 <% content_for :alert do %>
