--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -2,7 +2,7 @@
 	body_class = ""
 	body_class << " admin-mode" if authorized?
 	body_class << (" " + dom_id(@section))
-	puts body_class.strip!
+	return body_class.strip!
 end %>
 
 Coming soon!
