changed how body class is set

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,9 +15,9 @@
 <% content_for :body_class do 
 	body_class = ""
 	body_class << " admin-mode" if authorized?
-	body_class << (" " + dom_id(@section)) %>
-	<%= body_class.strip! %>
-<% end %>
+	body_class << (" " + dom_id(@section))
+	puts body_class.strip
+end %>
 
 <% content_for :alert do %>
 	<% if authorized? %>
