--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -11,9 +11,9 @@
 	body_class << "admin-mode" if authorized?
 	body_class << " root_" + dom_id(@section_root) unless @section_root == @section
 	body_class << " " + dom_id(@section)
-	body_class << " " + dom_id(@page)
-	puts body_class.strip
-end %>
+	body_class << " " + dom_id(@page) %>
+	<%= body_class.strip %>
+<% end %>
 
 <% content_for :alert do %>
 	<% if authorized? %>
