--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,9 +11,9 @@
 <% content_for :body_class do 
 	body_class = ""
 	body_class << " admin-mode" if authorized?
-	body_class << (" " + dom_id(@section))
-	puts body_class.strip
-end %>
+	body_class << (" " + dom_id(@section)) %>
+	<%= body_class.strip %>
+<% end %>
 
 <% content_for :auto_discovery_link do %>
 	<%= auto_discovery_link_tag :rss, blog_posts_url(1, :format => :rss) %>
