debugging for ie6

--- a/public/stylesheets/ie6.css
+++ b/public/stylesheets/ie6.css
@@ -8,3 +8,9 @@ div#content {
   height: 1%;
   overflow: visible;
 }
+div.content, div.block {
+	border: 2px solid white;
+}
+.scroll-content div {
+	position: static;
+}
